--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,10 +8,12 @@
   }
 }
 .press-center-link{
+  min-height: 400px;
   background-position: 250px 106px;
 }
 .media-center-link{
-  background-position: 215px -350px;
+  min-height: 400px;
+  background-position: 215px -370px;
 }
 .equipment-index-hero{
   overflow: hidden;
