--- a/app/styles/typography.scss
+++ b/app/styles/typography.scss
@@ -3,7 +3,7 @@
   font-size: 24px;
   font-family: "etelka-thin";
   &:before{
-    color: $mainColor;
+    color: #ff2120;
     content: '/';
     font-family: "etelka-text";
     margin-right: 14px;
