--- a/app/templates/catalog/index.hbs
+++ b/app/templates/catalog/index.hbs
@@ -4,7 +4,7 @@
 			<div class="page-title">{{t "common.slogan"}}</div>
 			<div class="body controls">
 				<div class="centered-input">
-					{{input placeholder=placeholderText value=search}}
+					{{input insert-newline="search" allowedKeys="enter" placeholder=placeholderText value=searchField submit="search"}}
 				</div>
 			</div>
 		</div>
