--- a/app/templates/components/hero-index.hbs
+++ b/app/templates/components/hero-index.hbs
@@ -103,13 +103,13 @@
           data-responsive_offset="on" 
 
           
-          style="z-index: 12; ">Outstanding efficiency and ecofriendly power 
+          style="z-index: 12; ">{{t "index.products.title"}}
         </div>
 
         <div class="tp-caption rs-parallaxlevel-0 hero-desription" 
            id="slide-235-layer-9" 
            data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
-           data-y="['middle','middle','top','top']" data-voffset="['20','20','230','210']" 
+           data-y="['middle','middle','top','top']" data-voffset="['40','40','230','210']" 
                 data-fontsize="['16','16','16','14']"
           data-lineheight="['24','24','24','22']"
           data-width="['448','356','334','277']"
@@ -126,13 +126,13 @@
           data-responsive_offset="on" 
 
           
-          style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal; text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.45); color: rgba(255, 255, 255, 0.7);">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
+          style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal; text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.45); color: rgba(255, 255, 255, 0.7);">{{t "index.products.body"}}
         </div>
 
         <div class="tp-caption rs-parallaxlevel-0" 
            id="slide-235-layer-8" 
            data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
-           data-y="['middle','middle','top','top']" data-voffset="['104','104','260','240']" 
+           data-y="['middle','middle','top','top']" data-voffset="['124','124','260','240']" 
                 data-width="['550','450','456','420']"
           data-height="none"
           data-whitespace="nowrap"
@@ -148,7 +148,6 @@
           
           style="z-index: 14; white-space: nowrap;">
           {{#link-to "catalog" class="button button-red"}}{{t "common.catalog"}}{{/link-to}}
-          <div class="button button-transparent button button-download">{{t "common.get_catalog"}}</div>
         </div>
       </li>
     </ul>
