--- a/app/templates/components/scroll-about.hbs
+++ b/app/templates/components/scroll-about.hbs
@@ -3,94 +3,50 @@
     {{main-navigation}}
   </header>
   <article class="intro">
-    <div class="disclaimer">Российская компания-производитель 
-  профессиональных средств гигиены для пищевой промышленности
-   и животноводческих комплексов.</div>
-    <div class="features">
-      <div class="container">
-        <div class="row">
-          <div class="item col-md-4">
-            <svg></svg>
-            <div class="title">Мы производим</div>
-            <div class="body">
-              только высокоэффективные препараты, проверенные в реальных условиях работы на лучших предприятиях Европы и России
-            </div>
-          </div>
-          <div class="item col-md-4">
-            <svg></svg>
-            <div class="title">Мы продаем</div>
-            <div class="body">
-              наши препараты только через сеть профессиональных дистрибьюторов, чей менеджерский состав всегда готов оказать необходимую консультацию и помощь.
-            </div>
-          </div>
-          <div class="item col-md-4">
-            <svg></svg>
-            <div class="title">Мы оказываем</div>
-            <div class="body">
-              полный комплекс услуг по разработке гигиенической программы и ее внедрению в существующий технологический процесс, а также услуги по поставке и настройке специализированного гигиенического оборудования
-            </div>
-          </div>
-        </div>
+    <div class="container">
+      <div class="page-title">
+
+        {{#if isRuLocale}}
+          {{{model.title_ru}}}
+        {{else}}
+          {{{model.title_en}}}
+        {{/if}}
+      </div>
+      <div class="content-block html-content">
+        {{#if isRuLocale}}
+          {{{model.content_ru}}}
+        {{else}}
+          {{{model.content_en}}}
+        {{/if}}
       </div>
     </div>
     
-    <div class="video-block">
-      <div class="article video-about">
-        <div class="title">You need to know about us</div>
-        <div class="body">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company.  </div>
-  
-        <div class="video-about-block small"></div>
-      </div>
-    </div>
   </article>
   <article class="lab">
     <div class="outer-wrapper">
       <div class="wrapper">
         <div class="inner-wrapper">
           <div class="article">
-            <div class="title">Научная лаборатория</div>
+            <div class="title">{{t 'about.lab.title'}}</div>
             <div class="body">
-              <p>Наша научная лаборатория располагается во Франции, где уже более 40 лет занимается разработкой продуктов для применения в животноводстве. </p>
-
-              <p>Мы имеем более 100 патентов на химические продукты различных целей и назначений. </p>
-
-              <p>В результате многолетней исследовательской работы и тесного взаимодействия с нашими клиентами, нами была создана широкая линейка моющих и дезинфицирующих средств, которая может фукнционально обеспечить любую комплексную гигиеническую программу для предприятий различных сфер деятельности. </p>
+              {{t 'about.lab.body'}}
             </div>
           </div>
         </div>
       </div>
     </div>
   </article>
-  <div class="factory-back {{backHidden}}"></div>
   <article class="production">
+  <div class="factory-back {{backHidden}}"></div>
     <div class="wrapper">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="article">
-              <div class="title">Производство</div>
+              <div class="title">{{t 'about.production.title'}}</div>
               <div class="body">
-                <p>Наши производственные комплексы располагаются во Франции в городе Сант-Этьен и в России в городе Энгельс Саратовской области, благодаря чему мы можем проводить гибкую ценовую политику, соотвествующую реалиям российского рынка.</p> 
-
-                <p>В процессе производства мы используем современное оборудование для производства аэрозолей, сухих порошкообразных веществ и жидких продуктов, а также высокоэффективные передовые технологии, химическое сырье известнейших европейских марок.</p>
-              </div>
-              <img src="assets/images/about/source-dealers.png">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </article>
-  <article class="quality">
-    <div class="wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="article">
-              <div class="title">Сертифицированное качество</div>
-              <img src="assets/images/iso-labels.png">
-              <div class="body">
-                <p>Процесс производства сертифицирован по международным стандартам ISO 9001 и ISO 14001 и это дает нам возможность соответствовать заявленным стандартам качества на всех этапах технологического процесса, а также соблюдать требования и нормы Европейского Экологического законодательства. </p> 
+              {{t 'about.production.body'}}
+                <img src="assets/images/iso-labels.png">
               </div>
             </div>
           </div>
@@ -98,48 +54,39 @@
       </div>
     </div>
   </article>
-  <article class="research">
-    <div class="outer-wrapper">
-      <div class="wrapper">
-        <div class="inner-wrapper">
-          <div class="container">
-            <div class="article">
-              <div class="title">Исследования</div>
-              <div class="body">
-                <p>Компания непрерывно ведет совместную исследовательскую работу с профильными научными институтами, химическими и биологическими кафедрами крупнейших европейских университетов, изучающими проблемы выращивания и содержания животных, поэтому ассортимент производимой продукции постоянно пополняется.</p>
-
-                <p>В своем производственном развитии мы ориентируемся на спрос и требования к продукту, предъявляемые покупателями. Конечный продукт проходит непрерывный процесс тестирования как на внутренней ислледовательской и испытательной базе, так и в европейских химических лабораториях, изучающих соотвествие препаратов заявленным характеристикам и нормам безопасности. После чего препараты проходят испытания в реальных условиях для проверки их высокой эффективности.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </article>
-  <article class="outro">
-    <div class="disclaimer">Все наши решения направлены на улучшение производственных показателей, создание необходимых условий труда, снижение влияния человеческого фактора и обеспечение качества конечного продукта, а также уменьшение затрат, связанных с обеспечением гигиены на производстве.</div>
-  </article>
-  <footer>
+ <footer>
     <div class="container-dark">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <a class="logo" href="/">{{logo-meratech}}</a>
-            <ul class="terms">
-              <li class="link">Privacy Policy</li>
-              <li class="link">Terms of Use</li>
-            </ul>
-            <ul class="social">
-              <li class="fa fa-facebook">Facebook</li>
-              <li class="fa fa-linkedin-square">Linked In</li>
-              <li class="fa fa-skype">Skype</li>
-            </ul>
+          <div class="col-md-3 alter-layout">
+            <div class="row">
+              <div class="col-md-12 col-sm-6">
+                <a class="logo" href="/">{{logo-meratech}}</a>
+              </div>
+              <div class="col-md-12 col-sm-6">
+                <ul class="terms">
+                  {{#link-to "pages.detail" "privacy-policy"}}<li class="link">{{t "common.privacy_policy"}}</li>{{/link-to}}
+                  {{#link-to "pages.detail" "terms-of-use"}}<li class="link">{{t "common.terms_of_use"}}</li>{{/link-to}}
+                </ul>
+                <!--ul class="social">
+                  <li class="fa fa-facebook">Facebook</li>
+                  <li class="fa fa-linkedin-square">Linked In</li>
+                  <li class="fa fa-skype">Skype</li>
+                </ul-->
+              </div>
+            </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-6">
             <div class="address">
-              19 Delovaya st., Nizhny Novgorod<br>
-              603093 Russia<br>
-              LCC Meratech Rus Group
+              {{#if ruLocale}}
+                Казанское шоссе 25 стр.2<br>
+                603087, Россия, Нижний Новгород<br>
+                ООО Мератек Рус Груп
+              {{else}}
+                25 Kazanskoe ave., building 2,  Nizhny Novgorod<br>
+                603087 Russia<br>
+                LCC Meratech Rus Group
+              {{/if}}
             </div>
             <div class="phone">
               8 (800) 333-58-88
@@ -148,28 +95,27 @@
               info@meratech.ru
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-6">
             <ul>
-              {{#link-to "about"}}<li>O <span>meratech</span></li>{{/link-to}}
-              {{#link-to "press-center"}}<li>Пресс-центр</li>{{/link-to}}
-              {{#link-to "media-center"}}<li>Документация</li>{{/link-to}}
-              {{#link-to "catalog"}}<li>Гигиенические средства</li>{{/link-to}}
-              {{#link-to "equipment"}}<li>Оборудование</li>{{/link-to}}
-              {{#link-to "index"}}<li>Проекты</li>{{/link-to}}
+              {{#link-to "about"}}<li>{{t "common.about_prep"}} <span>meratech</span></li>{{/link-to}}
+              {{#link-to "press-center"}}<li>{{t "common.press_center"}}</li>{{/link-to}}
+              {{#link-to "media-center"}}<li>{{t "common.documentation"}}</li>{{/link-to}}
+              {{#link-to "catalog"}}<li>{{t "common.hygiene_2"}} {{t "common.solutions"}}</li>{{/link-to}}
+              {{#link-to "equipment"}}<li>{{t "common.equipment"}}</li>{{/link-to}}
             </ul>
           </div>
           <div class="col-md-4">
-            <div class="title">Профессиональные гигиенические решения</div>
-            <div class="body">На протяжении долгого времени мы разрабатываем и производим самые современные моющие и дезинфицирующие средства для предприятий сельского хозяйства, мясоптицеперерабатывающих и молочных заводов, а также предприятий пивобезалкогольной промышленности. </div>
-            <div class="link login"><div class="fa fa-user"></div>Login</div>
+            <div class="title">{{t "common.footer.title"}}</div>
+            <div class="body">{{t "common.footer.body"}}</div>
+            {{auth-component}}
+            
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="copyright">Copyright © 2006-2015 meratech. All Rights Reserved. All other  trademarks are the property of their respective owners and are used with their permission. </div>
+            <div class="copyright">{{t "common.copyright"}} © 2006-2015 meratech. {{t "common.copyright_disclaimer"}} </div>
           </div>
         </div>
       </div>
     </div>
   </footer>
-    
