--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -282,10 +282,308 @@ header{
   }
 }
 
+.loading-notify {
+  width: 100%;
+  height: 100%;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,0.8);
+  background1: rgba(1,0,6,.6);
+  filter1: blur(7px) contrast(30);
+  z-index: -1;
+  opacity: 0;
+  -webkit-transition: 0.575s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+  -moz-transition: 0.575s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+  -ms-transition: 0.575s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+  transition: 0.575s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+  &.is-load{
+    z-index: 100000;
+    opacity: 1;
+    -webkit-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+    -moz-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+    -ms-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+    transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+  }
+
+  &:before {
+    display: block;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: rotate 1.2s ease-in-out infinite;
+    -moz-animation: rotate 1.2s ease-in-out infinite;
+    -ms-animation: rotate 1.2s ease-in-out infinite;
+    -o-animation: rotate 1.2s ease-in-out infinite;
+    animation: rotate 1.2s ease-in-out infinite;
+    border-radius: 100%;
+    border-top: 1px solid #c71e21;
+    border-bottom: 1px solid rgba(0,0,10,0.15);
+    border-left: 1px solid #c71e21;
+    border-right: 1px solid rgba(0,0,10,0.15);
+    content: '';
+  }
+  &:after {
+    display: block;
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    -webkit-animation: rotate-alter 1.2s ease-in-out .6s infinite;
+    -moz-animation: rotate-alter 1.2s ease-in-out .6s infinite;
+    -ms-animation: rotate-alter 1.2s ease-in-out .6s infinite;
+    -o-animation: rotate-alter 1.2s ease-in-out .6s infinite;
+    animation: rotate-alter 1.2s ease-in-out .6s infinite;
+    border-radius: 100%;
+    border-bottom: 1px solid #c71e21;
+    border-top: 1px solid rgba(0,0,10,0.15);
+    border-right: 1px solid #c71e21;
+    border-left: 1px solid rgba(0,0,10,0.15);
+    content: '';
+  }
+}
+
+// Animation
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(-720deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotateZ(-720deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
+@-moz-keyframes rotate {
+  0% {
+    transform: rotateZ(-720deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
+@-o-keyframes rotate {
+  0% {
+    transform: rotateZ(-720deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
+@keyframes rotate-alter {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+
+@-webkit-keyframes rotate-alter {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+
+@-moz-keyframes rotate-alter {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+
+@-o-keyframes rotate-alter {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+// .loading-notify{
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(255,255,255,0.75);
+//   filter: blur(7px) contrast(30);
+//   z-index: 0;
+//   opacity: 0;
+//   -webkit-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//   -moz-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//   -ms-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//   transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//   &.is-load{
+//     z-index: 100000;
+//     opacity: 1;
+//     -webkit-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//     -moz-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//     -ms-transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//     transition: 0.375s cubic-bezier(0.175, 0.885, 0.320, 1) opacity;
+//   }
+
+//   &:before, &:after {
+//     position: absolute;
+//     display: block;
+//     margin: auto;
+//     top: 0;
+//     bottom: 0;
+//     right: 0;
+//     left: 0;
+//     width: 50px;
+//     height: 50px;
+//     border-radius: 50%;
+//     background-color: #c71e21;
+//     content: '';
+//   }
+//   &:before {
+//     animation: blob-left-anim cubic-bezier(0.770, 0.000, 0.175, 1.000) 2s infinite;
+//   }
+//   &:after {
+//     animation: blob-right-anim cubic-bezier(0.770, 0.000, 0.175, 1.000) 2s infinite;
+//   }
+
+//   @keyframes blob-left-anim {
+//     0% {transform:scale(1.0) translate(0, 0);}
+//     33% {transform:scale(0.5) translate(80px, 0);}
+//     66% {transform:scale(0.8) translate(0, 0);}
+//     100% {transform:scale(1.0) translate(0, 0);}
+//   }
+
+//   @keyframes blob-right-anim {
+//     0% {transform:scale(1.0) translate(0, 0);}
+//     33% {transform:scale(0.5) translate(-80px, 0);}
+//     66% {transform:scale(0.8) translate(0, 0);}
+//     100% {transform:scale(1.0) translate(0, 0);}
+//   }
+
+//   .loading {
+//     filter: blur(15px) contrast(30);
+
+//     .ball {
+//       position: absolute;
+//       width: 120px;
+//       height: 120px;
+//       top: 50%;
+//       left: 50%;
+//       transform: translate(-50%, -50%) rotate(0deg);
+//       transform-origin: 66px center;
+//       margin-left: 40px;
+//     }
+
+//     .ball:before {
+//       content: '';
+//       width: 68px;
+//       height: 68px;
+//       position: absolute;
+//       top: 50%;
+//       left: -10px;
+//       transform: translateY(-50%);
+//       border-radius: 100%;
+//       background: #f00;
+//     }
+
+//     .ball-1 {
+//       margin-left: -50px;
+//     }
+
+//     .ball-2 {
+//       margin-left: 25px;
+//       transform: translateY(-50%) rotate(180deg);
+//       margin-left: -100px;
+//       animation: rotate-1 1.7s linear infinite;
+//       z-index: 2;
+//     }
+
+//     .ball-3 {
+//       margin-left: 120px;
+//     }
+//   }
+// }
+
+@keyframes rotate-1 {
+  0% {
+    margin-left: -18px;
+    transform: translateY(-50%) rotate(0deg);
+    transform-origin: 66px center;
+  }
+  25% {
+    margin-left: -25px;
+    transform: translateY(-50%) rotate(-180deg);
+    transform-origin: 66px center;
+  }
+  50% {
+    margin-left: -33px;
+    transform: translateY(-50%) rotate(-360deg);
+    transform-origin: 66px center;
+  }
+  50.1% {
+    transform-origin: -12px center;
+  }
+  75% {
+    margin-left: -36px;
+    transform: translateY(-50%) rotate(-180deg);
+    transform-origin: -12px center;
+  }
+  75.01 {
+    margin-left: -66px;
+    transform: translateY(-50%) rotate(-180deg);
+    transform-origin: -12px center;
+  }
+  100% {
+    margin-left: -18px;
+    transform: translateY(-50%) rotate(0deg);
+    transform-origin: -12px center;
+  }
+}
+
+
 .top-container{
   position: relative;
   width: 100%;
   overflow: hidden;
+  min-height: 700px;
+  background-color: #4f4d55;
+  .loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -500%);
+  }
 }
 
 .industry-menu{
