--- a/app/styles/news.scss
+++ b/app/styles/news.scss
@@ -131,10 +131,12 @@
 		padding-bottom: 70px;
 	}
 	.item{
+	  @media (max-width: 991px){
+			margin-bottom: 40px;
+	  }
 		.image{
 			width: 100%;
 			overflow: hidden;
-			background: rgba(21, 18, 28, 1);
 			position: relative;
 			height: 220px;
 		  @media (max-width: 1599px){
@@ -148,13 +150,15 @@
 			  -o-transform: translateY(-50%) translateX(-50%);
 			  -webkit-transform: translateY(-50%) translateX(-50%);
 				height: 220px;
-				width: auto;
+				width: 100%;
 				text-align: center;
         transform-origin: 50% 50%;
 	      -webkit-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 	      -moz-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 	      -ms-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
-	      transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
+	      transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;    
+	      background-position: center;
+    		background-size: cover;
 			  @media (max-width: 1599px){
 					height: 160px;
 			  }
@@ -255,15 +259,16 @@
 		}
 		&:hover{
 			.image{ 
-				img{
+				.img{
 		      transform: translateY(-50%) translateX(-50%) scale(1.3, 1.3);
 		      -o-transform: translateY(-50%) translateX(-50%) scale(1.3, 1.3);
 		      -webkit-transform: translateY(-50%) translateX(-50%) scale(1.3, 1.3);
-		      opacity: 0.4;
+					box-shadow: inset 1000px 0px 0px rgba(21, 18, 28, 0.4);
 		      -webkit-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 		      -moz-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 		      -ms-transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 		      transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) all;
+
 				}
 				.details{
 					opacity: 1;
@@ -487,9 +492,6 @@
     -ms-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
     transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
 	}
-	.button{
-		margin-left: 30px;
-	}
 	.description{
     font-family: 'etelka-light';
 		margin-left: 160px;
@@ -497,6 +499,10 @@
     -moz-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
     -ms-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
     transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
+	}
+	.button-narrow{
+		margin-top: 15px;
+		margin-left: 30px;
 	}
 	&:hover{
 		.category{
@@ -522,26 +528,75 @@
 .media-list{
 	padding-top: 30px;
 	.hero-item{
+		@media (max-width: 767px){
+			text-align: center;
+			.image img{
+				float: none;
+			}
+		}
 		.category{
-			margin-left: 50%;
+			margin-left: 270px;
+			@media (max-width: 991px){
+				margin-left: 320px;
+			}
+			@media (max-width: 767px){
+				margin: 30px auto 0;
+
+			}
 		}
 		.title{
-			margin-left: 50%;
+			margin-left: 270px;
     	font-family: 'etelka-text';
+    	color: #6c6a71;
+			@media (max-width: 991px){
+				margin-left: 320px;
+			}
+			@media (max-width: 767px){
+				margin-left: 0px;
+			}
 		}
 		.description{
-			margin-left: 50%;
+			margin-left: 270px;
     	font-family: 'etelka-thin';
     	opacity: 0.8;
+			@media (max-width: 991px){
+				margin-left: 320px;
+			}
+			@media (max-width: 767px){
+				margin-left: 0px;
+			}
 		}
 		&:hover{
 			.title{
 	      opacity: 0.8;	
 			}
 		}
+		@media (max-width: 991px){
+		  margin-bottom: 50px;
+		}
+		.button{
+			margin-left: 270px;
+			display: block;
+			width: 180px;
+			padding-left: 20px;
+			padding-right: 20px;
+			
+			@media (min-width: 992px) and (max-width: 1199px){
+			  display: none;
+			}
+			@media (max-width: 991px){
+				margin-left: 320px;
+			}
+			@media (max-width: 767px){
+				margin-left: 0px;
+				display: inline-block;
+				margin-top: 0px;
+			}
+		}
 	}
 	.item{
 		text-align: center;
+		margin-bottom: 30px;
 		.image{
 			height: 220px;
 		}
@@ -645,6 +700,9 @@
 		background-image: url('images/media-right.jpg');
 		background-position: right 120px;
 		background-size: auto 280px;
+		@media (max-width: 767px){
+			background-image: none;
+		}
 		.inner-wrapper{
 			background-repeat: no-repeat;
 			background-image: url('images/media-left.jpg');
@@ -652,6 +710,12 @@
 			background-position: left 100px;
 			box-shadow: inset 0px 0px 0px white;
 			height: 410px;
+			@media (max-width: 767px){
+				background-image: none;
+			}
+			@media (max-width: 530px){
+				height: 290px;
+			}
 		}
 	}
 }
@@ -659,7 +723,11 @@
 	margin: 30px auto;
 	display: flex;
 	flex-direction: row;
-	 width: 480px;
+	width: 480px;
+	@media (max-width: 530px){
+		display: none;
+	}
+
 	.stage-1, .stage-2{
 		height: 120px;
 		width: 120px;
@@ -724,10 +792,10 @@
 	}
   .stage-3{
 		height: 120px;
-		width: 80px;
+		width: 75px;
 		background: transparent url('images/media-assets.jpg');
 		position: relative;
-		background-size: 271px 106px;
+		background-size: 264px 106px;
     background-repeat: no-repeat;
     background-position: -191px 6px;
   	animation-name: appear-media3;
@@ -770,4 +838,54 @@
     transform: scale(1, 1);
     opacity: 1;
   }
+}
+
+.news-details{
+	.container-image{
+		background-size: cover;
+		background-position: center center;
+		min-height: 440px;
+		box-shadow: inset 10000px 0px 0px rgba(1,0,6,.45);
+	}
+}
+.article-details{
+	.container-image{
+		background-size: auto 300px;
+    background-repeat: no-repeat;
+    background-position: 80% 100px;
+    min-height: 500px;
+    box-shadow: inset 10000px 0 0 rgba(1,0,6,.25);
+	}
+}
+.news-details, .article-details{
+	.container{
+		padding-bottom: 0;
+	}
+	.article .title{
+		color: #fff;
+		padding-top: 120px;    
+		font-size: 54px;
+    line-height: 60px;    
+    max-width: 700px;
+    width: auto;
+	  @media (max-width: 767px){  
+			font-size: 36px;
+	    line-height: 42px; 
+	    text-align: center;  
+			padding-top: 150px;  
+	  }
+	}
+	.body{
+		padding: 20px 15px 0 15px;
+		.date{
+			color: #c71e21;
+			margin-bottom: 25px;
+			display: block;
+			font-size: 1.1em;
+			font-family: 'etelka-thin';
+		}
+    ul{
+      margin: 25px 0;
+    }
+	}
 }
