--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,6 @@
     {{main-navigation}}
   </header>
   {{outlet}}
-
   <footer>
     <div class="container-dark">
       <div class="container">
@@ -17,14 +16,14 @@
               </div>
               <div class="col-md-12 col-sm-6">
                 <ul class="terms">
-                  <li class="link">{{t "common.privacy_policy"}}</li>
-                  <li class="link">{{t "common.terms_of_use"}}</li>
+                  {{#link-to "pages.detail" "privacy-policy"}}<li class="link">{{t "common.privacy_policy"}}</li>{{/link-to}}
+                  {{#link-to "pages.detail" "terms-of-use"}}<li class="link">{{t "common.terms_of_use"}}</li>{{/link-to}}
                 </ul>
-                <ul class="social">
+                <!--ul class="social">
                   <li class="fa fa-facebook">Facebook</li>
                   <li class="fa fa-linkedin-square">Linked In</li>
                   <li class="fa fa-skype">Skype</li>
-                </ul>
+                </ul-->
               </div>
             </div>
           </div>
@@ -65,7 +64,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="copyright">Copyright © 2006-2015 meratech. All Rights Reserved. All other  trademarks are the property of their respective owners and are used with their permission. </div>
+            <div class="copyright">{{t "common.copyright"}} © 2006-2015 meratech. {{t "common.copyright_disclaimer"}} </div>
           </div>
         </div>
       </div>
