--- a/app/templates/catalog/detail.hbs
+++ b/app/templates/catalog/detail.hbs
@@ -11,7 +11,7 @@
           </ul>
           <div class="title">{{{title_formatted}}}</div>
           <div class="body">{{description}}</div>
-          <div class="registration">{{t "catalog.evrazes"}} <b>{{product.registration_number}} </b> {{t "catalog.date_at"}} {{date}}</div>
+          <div class="registration">{{t "catalog.evrazes"}} <b>{{product.registration_number}} </b> {{#if date}}{{t "catalog.date_at"}} {{date}}{{/if}}</div>
           <div class="ph">pH <span style="color: {{product.color_code_style}}">{{ph}}</span></div>
           <!--div class="button button-transparent button-download"></div-->
         </div>
@@ -26,10 +26,17 @@
     <div class="container container-catalog">
       <div class="heading heading-bottom"></div>
       <div class="row">
+
+      {{#if contentAvailable}}
         <div class="col-md-3">
           <div class="paragraph padded">
             <div class="title">{{t "catalog.usage"}}</div>
-            <div class="body">{{{usage}}}
+            <div class="body">
+            {{#if usage}}
+              {{{usage}}}
+            {{else}}
+              {{t "common.no_data"}}
+            {{/if}}
             </div>
 
           </div>
@@ -38,7 +45,11 @@
           <div class="paragraph">
             <div class="title">{{t "catalog.advantages"}}</div>
             <div class="body html-content">
-              {{{advantages}}}
+              {{#if advantages}}
+                {{{advantages}}}
+              {{else}}
+                {{t "common.no_data"}}
+              {{/if}}
             </div>
           </div>
         </div>
@@ -47,38 +58,43 @@
             <div class="title">{{t "common.documentation"}}</div>
             <div class="documents">
               {{#if registration}}
-                <a src="{{registration}}" class="registration">
+                <a href="{{registration}}" class="registration">
                   <div class="title">{{t "catalog.documentation.reg"}}</div>
-                  <div class="description">.pdf <span>(134 kB)</span></div>
+                  <div class="description">.pdf <span>({{random-number 800 150}} kB)</span></div>
                 </a>
               {{/if}}
               {{#if leaflet}}
-                <a src="{{leaflet}}" class="leaflet">
+                <a href="{{leaflet}}" class="leaflet">
                   <div class="title">{{t "catalog.documentation.leaflet"}}</div>
-                  <div class="description">.pdf <span>(109 kB)</span></div>
+                  <div class="description">.pdf <span>({{random-number 600 100}} kB)</span></div>
                 </a>
               {{/if}}
               {{#if session.isAuthenticated}}
                 {{#if prod}}
-                  <a src="{{prod}}" class="pds">
+                  <a href="{{prod}}" class="pds">
                     <div class="title">{{t "catalog.documentation.pds"}}</div>
-                    <div class="description">.pdf <span>(134 kB)</span></div>
+                    <div class="description">.pdf <span>({{random-number 200 80}}  kB)</span></div>
                   </a>
                 {{/if}}
                 {{#if safed}}
-                  <a src="{{safed}}" class="sds">
+                  <a href="{{safed}}" class="sds">
                     <div class="title">{{t "catalog.documentation.sds"}}</div>
-                    <div class="description">.pdf <span>(109 kB)</span></div>
+                    <div class="description">.pdf <span>({{random-number 100 50}}  kB)</span></div>
                   </a>
                 {{/if}}
               {{/if}}
             </div>
           </div>
         </div>
+      {{else}}
+        <div class="page-title">{{t "common.no-translation"}}</div>
+      {{/if}}
+
       </div>
     </div>
   </div>
 </article>
+{{#if contentAvailable}}
 <article class="catalog-block-specs">
   <div class="container-grey">
     <div class="container container-catalog">
@@ -92,9 +108,10 @@
               <div class="safety-signs">
                 <div class="hazard hazard-c"></div>
                 <div class="hazard hazard-n"></div>
-
+                {{#if mark.name}}
                 <div class="title">{{mark.name}}</div>
                 <div class="body">{{t mark.translate}}</div>
+                {{/if}}
               </div>
             </div>
 
@@ -241,6 +258,7 @@
     </div>
   </div>
 </article>
+{{/if}}
 <article class="related related-equipment">
   <div class="container-grey">
     <div class="container container-hero">
@@ -252,22 +270,23 @@
             <img src="http://localhost:4200/assets/images/equipment/satellite.png">
           </div>
           <div class="title">{{t "catalog.equipment_slogan"}}</div>
-          <div class="description">Применяется для автоматической и ручной комбинированной наружной мойки и дезинфекции технологического оборудования на предприятиях птицеперерабатывающей.</div>
-            <div class="button button-red button-download">{{t "common.goto_catalog"}}</div>
+          <div class="description">{{t "catalog.equipment_text"}}</div>
+          {{#link-to "equipment"}}<div class="button button-red">{{t "common.equipment"}}</div>{{/link-to}}
         </div>
-        <div class="col-md-6 hero-item">
-          <div class="catalog-image">
-            <img src="/assets/images/media/catalog-2.png">
+        
+          <div class="col-md-6 hero-item">
+            <div class="catalog-image">
+              <img src="/assets/images/media/catalog-2.png">
+            </div>
+            <div class="title">{{t "common.get_catalog_hash.equipment.title"}}</div>
+            <div class="description">{{t "common.get_catalog_hash.equipment.body"}}</div>
+            <a target="_blank" href="{{host}}/wp-content/uploads/2017/01/catalog_cleaning_eqiupment.pdf"><div class="button button-narrow button-download">{{t "common.get_catalog"}}</div></a>
           </div>
-          <div class="title">{{t "common.download.equipment_catalog"}}</div>
-          <div class="description">Применяется для автоматической и ручной комбинированной наружной мойки и дезинфекции технологического оборудования на предприятиях птицеперерабатывающей.</div>
-            <div class="button button-narrow button-download">{{t "common.download.catalog"}}</div>
-        </div>
       </div>
     </div>
   </div>
 </article>
-<article class="get-catalog hero">
+<article class="get-catalog all-hero hero">
   <div class="container-white">
     <div class="container container-hero">
       <div class="heading heading-top"></div>
@@ -275,9 +294,9 @@
       <div class="row">
         <div class="col-md-4">
           <div class="subarticle">
-            <div class="title">{{t "common.download.equipment_catalog"}}</div>
-            <div class="body">Применяется для автоматической и ручной комбинированной наружной мойки и дезинфекции технологического оборудования на предприятиях птицеперерабатывающей.</div>
-            <div class="button button-red">Смотреть каталог</div><div class="button button-transparent button-link">{{t "common.goto_mediacenter"}}</div>
+            <div class="title">{{t "common.get_catalog_hash.all.title"}}</div>
+            <div class="body">{{t "common.get_catalog_hash.all.body"}}</div>
+            {{#link-to "media-center"}}<div class="button button-red">{{t "common.go_to_media_center"}}</div>{{/link-to}}
           </div>
         </div>
       </div>
